# pyreader

./: .gitignore  AGENTS.MD  README.md  agent_conversations.md  pyproject.toml
src/pyreader/: __init__.py  ai.py  cli.py  epub.py  models.py  providers.py  text_utils.py
src/pyreader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_cli.py  test_providers.py  test_text_utils.py
